--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 <body>
     <center><h1>Prueba GitHub y Git</h1></center>
     <br>
-    Este es mi texto prueba, escrito desde VScode :)
-    <br>
-    <br>
+    Este es mi texto prueba, escrito desde VScode :) con todo mi amor.
     <br>
     <br>
     <center><h2>Prueba GitHub y Git</h2></center>
     <br>
     <b>Subtitulo de prueba baby, escrito desde VScode en mi archivo index.html</b>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center><h3>Prueba GitHub y Git</h3></center>
+    <br>
+    <b>Subtitulo 3 de prueba, escrito desde VScode, después de haber guardado mi archivo.</b>
 </body>
 </html>
